Fix overflow on highlightable

--- a/sass/modules/_highlightable.scss
+++ b/sass/modules/_highlightable.scss
@@ -28,8 +28,8 @@ $hflip2: $large-minor-start;
     position: absolute;
     top: 0;
     bottom: 0;
-    left: -5%;
-    right: -5%;
+    left: 0;
+    right: 0;
     transform: skewY($rotation) translateY(2rem);
     backface-visibility: hidden;
     background-image: linear-gradient(to right, $primarycolor, $accentcolor);
